@@ -114,10 +114,14 @@ before reading on.  If the package you are writing uses the
 @code{?INSTALL}.
 
 Once a source package is created, it must be installed by
-the command @code{R CMD INSTALL}.  Under Windows,
-please see the file
-@file{readme.packages} (in the top-level directory of the binary
-installation) for the tools that you need to have installed.
+the command @code{R CMD INSTALL}.
+@ifset UseExternalXrefs
+@xref{Add-on packages, , Add-on-packages,
+R-admin, R Installation and Administration}, for further details.
+@end ifset
+
+Other types of extensions are supported as from @R{} 2.1.0:
+@xref{Package types}.
 
 @menu
 * Package structure::           
@@ -129,6 +133,7 @@ installation) for the tools that you need to have installed.
 * Writing portable packages::   
 * Error and warning messages::  
 * Localization::                
+* Package types::               
 @end menu
 
 @node Package structure, Configure and cleanup, Creating R packages, Creating R packages
@@ -1816,7 +1821,7 @@ in another language one might need to say `There is no package in library
 
 @end itemize
 
-@node Localization,  , Error and warning messages, Creating R packages
+@node Localization, Package types, Error and warning messages, Creating R packages
 @section Localization
 
 @R{} 2.1.0 introduced mechanisms to translate the R- and C-level error
@@ -1915,6 +1920,50 @@ Packages without namespaces will need to use @code{domain="R-@var{pkg}"}
 explicitly in calls to @code{warning}, @code{stop}, @code{gettext} and
 @code{ngettext}.
 
+@node Package types,  , Localization, Creating R packages
+@section Package types
+
+The @file{DESCRIPTION} file has an optional field @code{Type} which if
+missing is assumed to be @code{Package}, the sort of extension discussed
+so far in this chapter.  Currently two other types are recognized, both
+of which need write permission in the @R{} installation tree.
+
+@menu
+* Frontend::                    
+* Translation::                 
+@end menu
+
+@node Frontend, Translation, Package types, Package types
+@subsection Frontend
+
+This is a rather general mechanism, designed for adding new front-ends
+such as the @pkg{gnomeGUI} package.  If a @file{configure} file is found
+in the top-level directory of the package it is executed, and then if a
+@code{Makefile} is found (often generated by @file{configure}),
+@code{make} is called.  If @code{R CMD INSTALL --clean} is used
+@code{make clean} is called.  No other action is taken.
+
+@code{R CMD build} can package this type of package, but @code{R CMD
+check} will check the type and raise an error.
+
+@node Translation,  , Frontend, Package types
+@subsection Translation
+
+Conventionally, a translation package for language @var{ll} is called
+@pkg{Translation-@var{ll}} and has @code{Type: Translation}.  It needs
+to contain the directories @file{share/locale/@var{ll}}
+and @file{library/@var{pkgname}/po/@var{ll}}, or at least those for
+which translations are available.  The files @file{.mo} are installed in the
+parallel places in the @R{} installation tree.
+
+For example, a package @pkg{Translation-it} might be prepared from an
+installed (and tested) version of @R{} by
+@example
+tar zcvf tmp.tar.gz share/locale/it library/*/po/it      
+@end example
+@noindent
+then unpacking in directory @file{Translation-it} and adding a suitable
+@file{DESCRIPTION} file.
 
 @node Writing R documentation files, Tidying and profiling R code, Creating R packages, Top
 @chapter Writing R documentation files
